Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION:  truncation

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2346,14 +2346,13 @@ div.vslider-item[aria-hidden="true"]{
 }
 .text-truncate1 {
   background-color: #fff;
-  box-shadow: 2px 2px 10px #246756;
-  padding: 2em;
+/*  padding: 2em;*/
   width: 200px;
 }
 
 .text-truncate1 p {
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;  
   overflow: hidden;
 }
